[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "botAeropuerto"
version = "0.1.0"
description = "A python bot for requesting info about an airport using several APIs and publishing it in several parts"
readme = "README.rst"
authors = [
  {name = "Fernando Tricas García", email = "fernand0Aeropuerto@elmundoesimperfecto.com"}
]
maintainers = [
  {name = "Fernando Tricas García", email = "fernand0Aeropuerto@elmundoesimperfecto.com"}
]
classifiers = [

]
license = {text = "Apache Software License 2.0"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/fernand0/botAeropuerto/issues"
changelog = "https://github.com/fernand0/botAeropuerto/blob/master/changelog.md"
homepage = "https://github.com/fernand0/botAeropuerto"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

